# S101toGML

./: .gitignore  CMakeLists.txt  README.md
S101GML/: CMakeLists.txt  S101GML.cpp  S101GML.h  XML_Item.cpp
S101toGML/: CMakeLists.txt  S101toGML.cpp  framework.h  targetver.h
extlibs/Clipper/: CMakeLists.txt
extlibs/pugixml/: CMakeLists.txt
libS101/: ATTR.cpp  ATTR.h  C3IL.cpp  CMakeLists.txt  CSAX.cpp  CUCO.cpp  CodeWithNumericCode.cpp  CodeWithNumericCode.h  DDR.cpp  DDR.h  DRDirectoryInfo.cpp  DRDirectoryInfo.h  DRDirectoryInfoWriter.cpp  DRDirectoryInfoWriter.h  DRDirectoryWriter.cpp  DRDirectoryWriter.h  DRReader.cpp  DRReader.h  DRReaderWriter.cpp  DRReaderWriter.h  ENCCommon.cpp  ENCCommon.h  FASC.cpp  FASC.h  F_ATTR.cpp  F_ATTR.h  F_C2IL.cpp  F_C2IL.h  F_C2IT.cpp  F_C2IT.h  F_C3IL.cpp  F_C3IL.h  F_C3IT.cpp  F_C3IT.h  F_CCID.cpp  F_CCID.h  F_CCOC.cpp  F_CCOC.h  F_COCC.cpp  F_COCC.h  (+127 more)
libS101/S101GML/: S101GML.cpp  S101GML.h
libS101/compat/: compat_mfc.cpp  compat_mfc.h
scripts/: compare_gmls.py  dist.bat  dist.sh
