project(S101GML)

set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)

file(GLOB SRCS
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
)

file(GLOB S101GML_HEADERS
    ${CMAKE_CURRENT_SOURCE_DIR}/*.h
    ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
)

add_library(${PROJECT_NAME} ${SRCS})
target_link_libraries(${PROJECT_NAME} libS101 pugixml)
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})


set_target_properties(${PROJECT_NAME} PROPERTIES
    PUBLIC_HEADER "${S101GML_HEADERS}"
)

install(TARGETS ${PROJECT_NAME}
    LIBRARY
        DESTINATION lib
    COMPONENT ${PROJECT_NAME}
    RUNTIME
        DESTINATION bin
    COMPONENT ${PROJECT_NAME}
    ARCHIVE
        DESTINATION lib
    COMPONENT ${PROJECT_NAME}
    PUBLIC_HEADER
        DESTINATION include/${PROJECT_NAME}
    COMPONENT ${PROJECT_NAME}
)