project(libS101)

# Collect libS101 sources
file(GLOB SRCS
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
)

file(GLOB LIBS101_HEADERS
    ${CMAKE_CURRENT_SOURCE_DIR}/*.h
    ${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
)

add_library(${PROJECT_NAME} ${SRCS})
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

set_target_properties(${PROJECT_NAME} PROPERTIES
    PUBLIC_HEADER "${LIBS101_HEADERS}"
)

install(TARGETS ${PROJECT_NAME}
    LIBRARY
        DESTINATION lib
    COMPONENT ${PROJECT_NAME}
    ARCHIVE
        DESTINATION lib
    COMPONENT ${PROJECT_NAME}
    PUBLIC_HEADER
        DESTINATION include/${PROJECT_NAME}
    COMPONENT ${PROJECT_NAME}
)